# ekapkgs-update

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: audit.yml  nix.yml  rust.yml
examples/: example-groups.json
migrations/: 20241216000001_create_updates_table.sql  20241216000002_create_update_logs_table.sql  20251213_add_pr_tracking.sql  20251216_create_update_logs_table.sql
nix/: dev-shell.nix  overlay.nix  package.nix
src/: main.rs  rewrite.rs
src/commands/: log.rs  mod.rs  prune_maintainers.rs  run.rs  update.rs
src/database/: mod.rs
src/git/: mod.rs
src/github/: mod.rs
src/gitlab/: mod.rs
src/groups/: mod.rs
src/nix/: mod.rs  nix_eval_jobs.rs  run_eval.rs
src/package/: mod.rs
src/pypi/: mod.rs
src/vcs_sources/: mod.rs
