[package]
name = "ekapkgs-update"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3"
rnix = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["process", "io-util", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

